z-index fix (#158)
* z-index fix

Set page contents to z-index of 1 so elements don’t display over menu overlay

* Use mixins

--- a/src/routes/team/home/Home.scss
+++ b/src/routes/team/home/Home.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/_mixins.scss';
+
 .root,
 .forms,
 .restaurantList {
@@ -6,6 +8,7 @@
 }
 
 .root {
+  @include page-root-layer;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
